# src/controllers/TikTokPost.controller.ts
@@ -156,3 +156,27 @@ export const getFriendPostsController = async (req: Request, res: Response) => {
         }
     })
 }
+
+export const getForYouPostsController = async (req: Request, res: Response) => {
+    const { page = 1, limit = 10 } = req.query as unknown as GetChildrenPostsQueryReq
+    const user_id = (req.decoded_authorization as TokenPayload)?.user_id
+    const { posts, total } = await tikTokPostService.getForYouPosts({
+        page: Number(page),
+        limit: Number(limit),
+        user_id
+    })
+
+    const totalPage = Math.ceil(total / Number(limit))
+
+    return res.json({
+        message: POST_MESSAGES.GET_FOR_YOU_POSTS_SUCCESS,
+        data: {
+            posts
+        },
+        meta: {
+            page: Number(page),
+            limit: Number(limit),
+            total_pages: totalPage
+        }
+    })
+}
